fix estimator session
